# Datacanvas-PIP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pypi-publish-dry.yml  pypi-publish.yml
src/datacanvas/: __init__.py  client.py  types.py
src/datacanvas/core/: __init__.py  constants.py  exceptions.py  http_client.py
src/datacanvas/resources/: __init__.py  data.py  devices.py
tests/: __init__.py  test_client.py  test_data.py  test_exceptions.py  test_http_client.py
